fix on smaller screen

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -117,7 +117,7 @@
 .ticker_newicon {
   display: flex;
   flex-direction: row;
-  gap: 0.5em;
+  gap: 0.5rem;
   align-items: center;
 }
 
@@ -125,6 +125,10 @@
   margin-block-start: 0em;
   margin-block-end: 0em;
   font-size: 1em;
+}
+
+.ticker_newicon img {
+  min-width: 24px;
 }
 
 .setting_size {
